// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildCodemagicStaticAnalysisPipeline output matches snapshot for default options 1`] = `
{
  "workflows": {
    "static-analysis": {
      "cache": {
        "cache_paths": [
          "$CM_BUILD_DIR/node_modules",
        ],
      },
      "environment": {
        "node": 20,
      },
      "instance_type": "linux_x2",
      "name": "Static Analysis",
      "scripts": [
        {
          "name": "Install dependencies",
          "script": "yarn install --immutable",
        },
        {
          "name": "TypeScript check",
          "script": "yarn tsc --noEmit",
        },
        {
          "name": "ESLint",
          "script": "yarn lint",
        },
        {
          "name": "Prettier",
          "script": "yarn format:check",
        },
        {
          "name": "Unit tests",
          "script": "yarn test --ci",
        },
      ],
      "triggering": {
        "branch_patterns": [
          {
            "include": true,
            "pattern": "main",
          },
        ],
        "events": [
          "push",
          "pull_request",
        ],
      },
    },
  },
}
`;

exports[`buildCodemagicStaticAnalysisPipeline output matches snapshot for npm package manager 1`] = `
{
  "workflows": {
    "static-analysis": {
      "cache": {
        "cache_paths": [
          "$CM_BUILD_DIR/node_modules",
        ],
      },
      "environment": {
        "node": 20,
      },
      "instance_type": "linux_x2",
      "name": "Static Analysis",
      "scripts": [
        {
          "name": "Install dependencies",
          "script": "npm ci",
        },
        {
          "name": "TypeScript check",
          "script": "npm run tsc -- --noEmit",
        },
        {
          "name": "ESLint",
          "script": "npm run lint",
        },
        {
          "name": "Prettier",
          "script": "npm run format:check",
        },
        {
          "name": "Unit tests",
          "script": "npm test -- --ci",
        },
      ],
      "triggering": {
        "branch_patterns": [
          {
            "include": true,
            "pattern": "main",
          },
        ],
        "events": [
          "push",
          "pull_request",
        ],
      },
    },
  },
}
`;
